<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        app:cardCornerRadius="24dp"

        app:cardBackgroundColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:strokeWidth="1dp">
<!--        app:cardElevation="16dp"-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_car1_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="A Car"
                android:src="@drawable/ferrari_amalfi_2026"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_car1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/car1_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_car1_img" />


            <TextView
                android:id="@+id/tv_car1_preco"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/car1_info_price"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_car1" />

            <!-- INFO -->

            <TextView
                android:id="@+id/tv_car1_preco_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="R$ 7.000.000.00"
                app:layout_constraintStart_toEndOf="@id/tv_car1_potency"
                app:layout_constraintTop_toBottomOf="@id/tv_car1" />


            <TextView
                android:id="@+id/tv_car1_bateria"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/car1_info_battery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_car1_preco" />

            <TextView
                android:id="@+id/tv_car1_bateria_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="300 kWh"
                app:layout_constraintStart_toEndOf="@id/tv_car1_potency"
                app:layout_constraintTop_toBottomOf="@id/tv_car1_preco_value" />


            <TextView
                android:id="@+id/tv_car1_potency"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/car1_info_power"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_car1_bateria" />

            <TextView
                android:id="@+id/tv_car1_potency_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="800 cv"
                app:layout_constraintStart_toEndOf="@id/tv_car1_potency"
                app:layout_constraintTop_toBottomOf="@id/tv_car1_bateria_value" />


            <TextView
                android:id="@+id/tv_car1_recharger"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/car1_info_recharger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_car1_potency"
                app:layout_constraintBottom_toBottomOf="@+id/cl_card_content1"/>

            <TextView
                android:id="@+id/tv_car1_recharger_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="30 min"
                app:layout_constraintStart_toEndOf="@id/tv_car1_potency"
                app:layout_constraintTop_toBottomOf="@id/tv_car1_potency_value" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>